<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AddEditTaskActivity"
    android:background="@color/colorWhite">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        app:layout_constraintTop_toTopOf="parent"

        app:titleTextColor="@color/colorWhite"
        app:title="@string/add_task"
        android:background="@color/colorBlue"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_task_name"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        app:layout_constraintTop_toBottomOf="@id/toolbar"

        android:hint="@string/task_name_hint"
        android:inputType="textNoSuggestions"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_task_description"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        android:lines="8"

        app:layout_constraintTop_toBottomOf="@id/edit_text_task_name"

        android:hint="@string/task_description_hint"
        android:inputType="textMultiLine"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FAB_cancel_add"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        app:layout_constraintTop_toBottomOf="@id/edit_text_task_description"
        app:layout_constraintStart_toStartOf="parent"

        android:backgroundTint="@color/colorOrange"
        app:icon="@drawable/ic_uncheck"
        app:iconSize="24dp"
        app:iconTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:text="@string/cancel"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FAB_confirm_add"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        app:layout_constraintTop_toBottomOf="@id/edit_text_task_description"
        app:layout_constraintEnd_toEndOf="parent"

        android:backgroundTint="@color/colorBlue"
        app:icon="@drawable/ic_check"
        app:iconTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:text="@string/confirm"
        />

</androidx.constraintlayout.widget.ConstraintLayout>