<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:background="@color/colorOrange">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        app:layout_constraintTop_toTopOf="parent"

        app:titleTextColor="@color/colorWhite"
        app:title="@string/app_name"
        android:background="@color/colorBlue"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_tasks"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:background="@color/colorWhite"

        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/task_item"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FAB_add"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginFAB"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:backgroundTint="@color/colorBlue"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/colorWhite"
        android:text="@string/add_task"
        android:textColor="@color/colorWhite"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FAB_delete_all"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginFAB"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:backgroundTint="@color/colorRed"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/colorWhite"
        android:text="@string/task_delete"
        android:textColor="@color/colorWhite"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/FAB_menu"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginFAB"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:backgroundTint="@color/colorBlue"
        app:icon="@drawable/ic_menu"
        app:iconTint="@color/colorWhite"
        android:text="@string/menu"
        android:textColor="@color/colorWhite"
        />

</androidx.constraintlayout.widget.ConstraintLayout>