<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginTop="6dp"
    style="@style/CardView.Light"
    android:background="@color/colorWhite"
    android:id="@+id/cardview">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_header_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/radiobutton_check"

                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                android:buttonTint="@color/colorBlue"

                android:gravity="center"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_name"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/radiobutton_check"
                app:layout_constraintEnd_toStartOf="@id/button_expand"

                android:text="Task name Placeholder"
                android:textSize="24sp"

                />

            <ImageButton
                android:id="@+id/button_expand"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"

                android:background="@android:color/background_light"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_detail_layout"

            android:visibility="gone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/card_header_layout"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_description"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                android:paddingBottom="12dp"

                app:layout_constraintTop_toTopOf="parent"

                android:textSize="16sp"
                android:text="@string/description_placeholder"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/FAB_check"

                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="8dp"

                app:layout_constraintTop_toBottomOf="@id/textview_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/FAB_edit"

                android:backgroundTint="@color/colorOrange"

                android:text="@string/check"
                android:textSize="12sp"
                android:textColor="@color/colorBlue"

                app:icon="@drawable/ic_check"
                app:iconSize="16sp"
                app:iconTint="@color/colorBlue"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/FAB_edit"

                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="8dp"

                app:layout_constraintTop_toBottomOf="@id/textview_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/FAB_check"
                app:layout_constraintEnd_toStartOf="@id/FAB_delete"

                android:backgroundTint="@color/colorOrange"

                android:text="@string/edit_task"
                android:textSize="12sp"
                android:textColor="@color/colorBlue"

                app:icon="@drawable/ic_edit"
                app:iconSize="16sp"
                app:iconTint="@color/colorBlue"
                />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/FAB_delete"

                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_margin="8dp"

                app:layout_constraintTop_toBottomOf="@id/textview_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/FAB_edit"
                app:layout_constraintEnd_toEndOf="parent"

                android:backgroundTint="@color/colorRed"

                app:icon="@drawable/ic_delete"
                app:iconSize="16sp"
                app:iconTint="@color/colorWhite"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>